# sniper

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  snipe.py
certs/: exampledomain.crt  exampledomain.csr  exampledomain.key
src/sniper/: __init__.py  api.py  argparse.py  httpx.py  utils.py
